--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         id="navbarNavDropdown">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="#" class="nav-link color nav">Campeones</a>
+                                <a href="#Campeones" class="nav-link color nav">Campeones</a>
                             </li>
                             <li class="nav-item">
                                 <a href="#" class="nav-link color nav">Sabías
@@ -53,6 +53,71 @@
                     </div>
                 </header>
             </main>
+            <div id="Campeones">
+                <div class="row text-center bg-info-subtle px-5">
+                    <h1 class="p-4">CAMPEONES</h1>
+                    <div class="card h-75 w-50 col-md-4 text-center p-3">
+                        <h2 class="my-3">Vayne</h2>
+                        <div class="overflow">
+                            <img src="./public/image/Vayne.jpg" alt
+                                class="card-img-top p-4">
+                        </div>
+                        <div class="card-body">
+                            <p>Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Ipsum nostrum excepturi saepe
+                                labore necessitatibus dolor minima magnam,
+                                tempore hic repellat aspernatur odit, dolorem
+                                beatae rem id debitis sequi incidunt. Odio.</p>
+                            <a href="equipo.php">Conoce más</a>
+                        </div>
+                    </div>
+                    <div class="card h-75 w-50 col-md-4 text-center p-3">
+                        <h2 class="my-3">Lucian</h2>
+                        <div class="overflow">
+                            <img src="./public/image/Lucian.jpg" alt
+                                class="card-img-top p-4">
+                        </div>
+                        <div class="card-body">
+                            <p>Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Ipsum nostrum excepturi saepe
+                                labore necessitatibus dolor minima magnam,
+                                tempore hic repellat aspernatur odit, dolorem
+                                beatae rem id debitis sequi incidunt. Odio.</p>
+                            <a href="equipo.php">Conoce más</a>
+                        </div>
+                    </div>
+                    <div class="card h-75 w-50 col-md-6 text-center">
+                        <h2>Thresh</h2>
+                        <div class="overflow">
+                            <img src="./public/image/Thresh.jpg" alt
+                                class="card-img-top p-4">
+                        </div>
+                        <div class="card-body">
+                            <p>Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Ipsum nostrum excepturi saepe
+                                labore necessitatibus dolor minima magnam,
+                                tempore hic repellat aspernatur odit, dolorem
+                                beatae rem id debitis sequi incidunt. Odio.</p>
+                            <a href="equipo.php">Conoce más</a>
+                        </div>
+                    </div>
+                    <div class="card h-75 w-50 col-md-6 text-center">
+                        <h2>Renata Glasc</h2>
+                        <div class="overflow">
+                            <img src="./public/image/Renata Glasc.jpeg" alt
+                                class="card-img-top p-4">
+                        </div>
+                        <div class="card-body">
+                            <p>Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Ipsum nostrum excepturi saepe
+                                labore necessitatibus dolor minima magnam,
+                                tempore hic repellat aspernatur odit, dolorem
+                                beatae rem id debitis sequi incidunt. Odio.</p>
+                            <a href="equipo.php">Conoce más</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <script src="./public/bootstrap/js/bootstrap.min.js">
         </script>
