--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav class="navbar navbar-expand-lg
         bg-body-tertiary py-0">
                 <div class="container-fluid bg-dark-subtle p-3">
-                    <a href="index.php" class="navbar-brand marca">LOLRift</a>
+                    <a href="index.html" class="navbar-brand marca">LOLRift</a>
                     <div class="text-center"
                         id="navbarNavDropdown">
                         <ul class="navbar-nav">
@@ -22,11 +22,11 @@
                                 <a href="#Campeones" class="nav-link color nav">Campeones</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link color nav">Sabías
+                                <a href="#Sabiasque" class="nav-link color nav">Sabías
                                     que...</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link color nav">Contacto</a>
+                                <a href="#Footer" class="nav-link color nav">Contacto</a>
                             </li>
                             <li class="nav-item">
                                 <button class="btn rounded-fill"
@@ -56,68 +56,141 @@
             <div id="Campeones">
                 <div class="row text-center bg-info-subtle px-5">
                     <h1 class="p-4">CAMPEONES</h1>
-                    <div class="card h-75 w-50 col-md-4 text-center p-3">
-                        <h2 class="my-3">Vayne</h2>
-                        <div class="overflow">
-                            <img src="./public/image/Vayne.jpg" alt
-                                class="card-img-top p-4">
-                        </div>
-                        <div class="card-body">
-                            <p>Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Ipsum nostrum excepturi saepe
-                                labore necessitatibus dolor minima magnam,
-                                tempore hic repellat aspernatur odit, dolorem
-                                beatae rem id debitis sequi incidunt. Odio.</p>
-                            <a href="equipo.php">Conoce más</a>
-                        </div>
-                    </div>
-                    <div class="card h-75 w-50 col-md-4 text-center p-3">
-                        <h2 class="my-3">Lucian</h2>
-                        <div class="overflow">
-                            <img src="./public/image/Lucian.jpg" alt
-                                class="card-img-top p-4">
-                        </div>
-                        <div class="card-body">
-                            <p>Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Ipsum nostrum excepturi saepe
-                                labore necessitatibus dolor minima magnam,
-                                tempore hic repellat aspernatur odit, dolorem
-                                beatae rem id debitis sequi incidunt. Odio.</p>
-                            <a href="equipo.php">Conoce más</a>
+                    <div class="col-md-6 px-3">
+                        <div class="card text-center p-3 tarjeta">
+                            <h2 class="my-3">Vayne</h2>
+                            <div class="overflow">
+                                <img src="./public/image/Vayne.jpg" alt
+                                    class="card-img-top p-4">
+                            </div>
+                            <div class="card-body">
+                                <p>Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Ipsum nostrum excepturi
+                                    saepe
+                                    labore necessitatibus dolor minima magnam,
+                                    tempore hic repellat aspernatur odit,
+                                    dolorem
+                                    beatae rem id debitis sequi incidunt. Odio.</p>
+                                <a href="index2.html">Conoce más</a>
+                            </div>
                         </div>
                     </div>
-                    <div class="card h-75 w-50 col-md-6 text-center">
-                        <h2>Thresh</h2>
-                        <div class="overflow">
-                            <img src="./public/image/Thresh.jpg" alt
-                                class="card-img-top p-4">
-                        </div>
-                        <div class="card-body">
-                            <p>Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Ipsum nostrum excepturi saepe
-                                labore necessitatibus dolor minima magnam,
-                                tempore hic repellat aspernatur odit, dolorem
-                                beatae rem id debitis sequi incidunt. Odio.</p>
-                            <a href="equipo.php">Conoce más</a>
+                    <div class="col-md-6 px-3">
+                        <div class="card text-center p-3 tarjeta">
+                            <h2 class="my-3">Lucian</h2>
+                            <div class="overflow">
+                                <img src="./public/image/Lucian.jpg" alt
+                                    class="card-img-top p-4">
+                            </div>
+                            <div class="card-body">
+                                <p>Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Ipsum nostrum excepturi
+                                    saepe
+                                    labore necessitatibus dolor minima magnam,
+                                    tempore hic repellat aspernatur odit,
+                                    dolorem
+                                    beatae rem id debitis sequi incidunt. Odio.</p>
+                                <a href="index2.html">Conoce más</a>
+                            </div>
                         </div>
                     </div>
-                    <div class="card h-75 w-50 col-md-6 text-center">
-                        <h2>Renata Glasc</h2>
-                        <div class="overflow">
-                            <img src="./public/image/Renata Glasc.jpeg" alt
-                                class="card-img-top p-4">
+                    <div class="col-md-6 px-3 py-4">
+                        <div class="card text-center p-3 tarjeta">
+                            <h2 class="my-3">Thresh</h2>
+                            <div class="overflow">
+                                <img src="./public/image/Thresh.jpg" alt
+                                    class="card-img-top p-4">
+                            </div>
+                            <div class="card-body">
+                                <p>Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Ipsum nostrum excepturi
+                                    saepe
+                                    labore necessitatibus dolor minima magnam,
+                                    tempore hic repellat aspernatur odit,
+                                    dolorem
+                                    beatae rem id debitis sequi incidunt. Odio.</p>
+                                <a href="index2.html">Conoce más</a>
+                            </div>
                         </div>
-                        <div class="card-body">
-                            <p>Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Ipsum nostrum excepturi saepe
-                                labore necessitatibus dolor minima magnam,
-                                tempore hic repellat aspernatur odit, dolorem
-                                beatae rem id debitis sequi incidunt. Odio.</p>
-                            <a href="equipo.php">Conoce más</a>
+                    </div>
+                    <div class="col-md-6 px-3 py-4">
+                        <div class="card text-center p-3 tarjeta">
+                            <h2 class="my-3">Renata Glasc</h2>
+                            <div class="overflow">
+                                <img src="./public/image/Renata Glasc.jpeg" alt
+                                    class="card-img-top p-4">
+                            </div>
+                            <div class="card-body">
+                                <p>Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Ipsum nostrum excepturi
+                                    saepe
+                                    labore necessitatibus dolor minima magnam,
+                                    tempore hic repellat aspernatur odit,
+                                    dolorem
+                                    beatae rem id debitis sequi incidunt. Odio.</p>
+                                <a href="index2.html">Conoce más</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <div id="Sabiasque">
+                <div class="row text-center bg-secondary px-5">
+                    <h1 class="p-4">SABÍAS QUE...</h1>
+                    <div class="col-md-4 px-3 py-4">
+                        <div class="card text-center p-3 bg-body-secondary">
+                            <div class="overflow">
+                                <img src="./public/image/Pentakill.jpg" alt
+                                    class="card-img-top p-4">
+                            </div>
+                            <div class="card-body">
+                                <p>A pesar que se ha popularizado mucho el uso de la palabra Pentakill en otros MOBA, lo cierto es que Riot es propietario de la patente de esa palabra. Además, el grupo de música Pentakill liderado por Karthus también está registrado a nombre de Riot Games.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 px-3 py-4">
+                        <div class="card text-center p-3 bg-body-secondary">
+                            <div class="overflow">
+                                <img src="./public/image/Braum.jpg" alt
+                                    class="card-img-top p-4">
+                            </div>
+                            <div class="card-body">
+                                <p>Cuando se juega a Aram, lo más importante es alimentar a los poros. Una vez que los jugadores alimentan a un poro diez veces, este explotará en 8 poritos. Para alimentarlos, sólo hay que darles una de las galletas con las que se empieza la partida. Un caso particular es Braum. Si este personaje le da una galleta, al poro le saldrá un bello bigote.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 px-3 py-4">
+                        <div class="card text-center p-3 bg-body-secondary">
+                            <div class="overflow">
+                                <img src="./public/image/Evelynn.jpg" alt
+                                    class="card-img-top p-4">
+                            </div>
+                            <div class="card-body">
+                                <p>Evelynn mató a los padres de Vayne, y esta considera la magia negra como algo malvado e inadmisible.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <footer id="Footer" class="bg-dark text-white py-4">
+                <div class="container">
+                    <nav class="row">
+                        <ul class="col-md-12 list-unstyled">
+                            <li class="text-uppercase text-center">Síguenos en nuestras Redes Sociales</li>
+                            <div>
+                                <li class="d-flex justify-content-between py-3">
+                                    <a href="RSociales.html" class="text-reset"><i class="bi bi-facebook"></i></a>
+                                    <a href="RSociales.html" class="text-reset"><i class="bi bi-twitter-x"></i></a>
+                                    <a href="RSociales.html" class="text-reset"><i class="bi bi-instagram"></i></a>
+                                    <a href="RSociales.html" class="text-reset"><i class="bi bi-pinterest"></i></a>
+                                </li>
+                            </div>
+                            <li class="text-center">Todos los derechos reservados</li>
+                        </ul>
+                    </nav>
+                </div>
+            </footer>
         </div>
         <script src="./public/bootstrap/js/bootstrap.min.js">
         </script>
