--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                     tempore hic repellat aspernatur odit,
                                     dolorem
                                     beatae rem id debitis sequi incidunt. Odio.</p>
-                                <a href="index2.html">Conoce más</a>
+                                <a class="boton" href="index2.html">Saber más</a>
                             </div>
                         </div>
                     </div>
@@ -90,7 +90,7 @@
                                     tempore hic repellat aspernatur odit,
                                     dolorem
                                     beatae rem id debitis sequi incidunt. Odio.</p>
-                                <a href="index2.html">Conoce más</a>
+                                <a class="boton" href="index2.html">Saber más</a>
                             </div>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                                     tempore hic repellat aspernatur odit,
                                     dolorem
                                     beatae rem id debitis sequi incidunt. Odio.</p>
-                                <a href="index2.html">Conoce más</a>
+                                <a class="boton" href="index2.html">Saber más</a>
                             </div>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                                     tempore hic repellat aspernatur odit,
                                     dolorem
                                     beatae rem id debitis sequi incidunt. Odio.</p>
-                                <a href="index2.html">Conoce más</a>
+                                <a class="boton" href="index2.html">Saber más</a>
                             </div>
                         </div>
                     </div>
@@ -168,6 +168,39 @@
                             </div>
                             <div class="card-body">
                                 <p>Evelynn mató a los padres de Vayne, y esta considera la magia negra como algo malvado e inadmisible.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 px-3 py-4">
+                        <div class="card text-center p-3 bg-body-secondary">
+                            <div class="overflow">
+                                <img src="./public/image/Orianna.jpg" alt
+                                    class="card-img-top p-4">
+                            </div>
+                            <div class="card-body">
+                                <p>Orianna fue humana al 100% hace mucho tiempo. Sin embargo, tuvo que reemplazar partes de su cuerpo debido a una infección ocasionada en Zaun; Orianna llevaba una máscara y se la dio a un niño, lo que le provocó la infección por las poluciones de la ciudad. Al final acabó siendo 100% máquina.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 px-3 py-4">
+                        <div class="card text-center p-3 bg-body-secondary">
+                            <div class="overflow">
+                                <img src="./public/image/Ekko.jpg" alt
+                                    class="card-img-top p-4">
+                            </div>
+                            <div class="card-body">
+                                <p>Los padres de Ekko están vivos, y le metieron en una escuela top de Piltover, aunque Ekko no lo quería. Ekko vio el genio oculto de Zaun, y ahora se va con "chusma" de la ciudad formada por un grupo de niños. Los padres de Ekko no sabían esto, y hace todo lo posible por ocultarlo.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 px-3 py-4">
+                        <div class="card text-center p-3 bg-body-secondary">
+                            <div class="overflow">
+                                <img src="./public/image/Aatrox.jpg" alt
+                                    class="card-img-top p-4">
+                            </div>
+                            <div class="card-body">
+                                <p>Aatrox era un ascendente de los generales de Shurima, pero se corrompió cuando luchó contra el Vacío, y fue sellado con las herramientas que los aspectos del crepúsculo dio a los mortales.</p>
                             </div>
                         </div>
                     </div>
