--- a/index.html
+++ b/index.html
@@ -64,14 +64,8 @@
                                     class="card-img-top p-4">
                             </div>
                             <div class="card-body">
-                                <p>Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Ipsum nostrum excepturi
-                                    saepe
-                                    labore necessitatibus dolor minima magnam,
-                                    tempore hic repellat aspernatur odit,
-                                    dolorem
-                                    beatae rem id debitis sequi incidunt. Odio.</p>
-                                <a class="boton" href="index2.html">Saber más</a>
+                                <p>Shauna Vayne es una cazadora de monstruos demaciana letal y despiadada que ha dedicado su vida a buscar y destruir al demonio que asesinó a su familia...</p>
+                                <a class="boton" href="vayne.html">Saber más</a>
                             </div>
                         </div>
                     </div>
@@ -83,14 +77,8 @@
                                     class="card-img-top p-4">
                             </div>
                             <div class="card-body">
-                                <p>Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Ipsum nostrum excepturi
-                                    saepe
-                                    labore necessitatibus dolor minima magnam,
-                                    tempore hic repellat aspernatur odit,
-                                    dolorem
-                                    beatae rem id debitis sequi incidunt. Odio.</p>
-                                <a class="boton" href="index2.html">Saber más</a>
+                                <p>Lucian, antiguo Centinela de la Luz, es un sombrío cazador de espíritus eternos a los que persigue implacablemente y los aniquila con sus pistolas reliquias...</p>
+                                <a class="boton" href="Lucian.html">Saber más</a>
                             </div>
                         </div>
                     </div>
@@ -102,14 +90,8 @@
                                     class="card-img-top p-4">
                             </div>
                             <div class="card-body">
-                                <p>Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Ipsum nostrum excepturi
-                                    saepe
-                                    labore necessitatibus dolor minima magnam,
-                                    tempore hic repellat aspernatur odit,
-                                    dolorem
-                                    beatae rem id debitis sequi incidunt. Odio.</p>
-                                <a class="boton" href="index2.html">Saber más</a>
+                                <p>Thresh, un ser sádico y astuto, es un ambicioso y trastornado espíritu de las Islas de la Sombra.</p>
+                                <a class="boton" href="Thresh.html">Saber más</a>
                             </div>
                         </div>
                     </div>
@@ -128,7 +110,7 @@
                                     tempore hic repellat aspernatur odit,
                                     dolorem
                                     beatae rem id debitis sequi incidunt. Odio.</p>
-                                <a class="boton" href="index2.html">Saber más</a>
+                                <a class="boton" href="Renata.html">Saber más</a>
                             </div>
                         </div>
                     </div>
@@ -213,10 +195,10 @@
                             <li class="text-uppercase text-center">Síguenos en nuestras Redes Sociales</li>
                             <div>
                                 <li class="d-flex justify-content-between py-3">
-                                    <a href="RSociales.html" class="text-reset"><i class="bi bi-facebook"></i></a>
-                                    <a href="RSociales.html" class="text-reset"><i class="bi bi-twitter-x"></i></a>
-                                    <a href="RSociales.html" class="text-reset"><i class="bi bi-instagram"></i></a>
-                                    <a href="RSociales.html" class="text-reset"><i class="bi bi-pinterest"></i></a>
+                                    <a href="https://www.facebook.com/?locale=es_LA" class="text-reset"><i class="bi bi-facebook"></i></a>
+                                    <a href="https://twitter.com/?lang=es" class="text-reset"><i class="bi bi-twitter-x"></i></a>
+                                    <a href="https://www.instagram.com/" class="text-reset"><i class="bi bi-instagram"></i></a>
+                                    <a href="https://www.pinterest.com.mx/" class="text-reset"><i class="bi bi-pinterest"></i></a>
                                 </li>
                             </div>
                             <li class="text-center">Todos los derechos reservados</li>
