--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
                                     class="card-img-top p-4">
                             </div>
                             <div class="card-body">
-                                <p>Shauna Vayne es una cazadora de monstruos demaciana letal y despiadada que ha dedicado su vida a buscar y destruir al demonio que asesinó a su familia...</p>
+                                <p>Shauna Vayne es una cazadora de monstruos
+                                    demaciana letal y despiadada que ha dedicado
+                                    su vida a buscar y destruir al demonio que
+                                    asesinó a su familia...</p>
                                 <a class="boton" href="vayne.html">Saber más</a>
                             </div>
                         </div>
@@ -77,7 +80,10 @@
                                     class="card-img-top p-4">
                             </div>
                             <div class="card-body">
-                                <p>Lucian, antiguo Centinela de la Luz, es un sombrío cazador de espíritus eternos a los que persigue implacablemente y los aniquila con sus pistolas reliquias...</p>
+                                <p>Lucian, antiguo Centinela de la Luz, es un
+                                    sombrío cazador de espíritus eternos a los
+                                    que persigue implacablemente y los aniquila
+                                    con sus pistolas reliquias...</p>
                                 <a class="boton" href="Lucian.html">Saber más</a>
                             </div>
                         </div>
@@ -90,7 +96,9 @@
                                     class="card-img-top p-4">
                             </div>
                             <div class="card-body">
-                                <p>Thresh, un ser sádico y astuto, es un ambicioso y trastornado espíritu de las Islas de la Sombra.</p>
+                                <p>Thresh, un ser sádico y astuto, es un
+                                    ambicioso y trastornado espíritu de las
+                                    Islas de la Sombra...</p>
                                 <a class="boton" href="Thresh.html">Saber más</a>
                             </div>
                         </div>
@@ -103,13 +111,10 @@
                                     class="card-img-top p-4">
                             </div>
                             <div class="card-body">
-                                <p>Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Ipsum nostrum excepturi
-                                    saepe
-                                    labore necessitatibus dolor minima magnam,
-                                    tempore hic repellat aspernatur odit,
-                                    dolorem
-                                    beatae rem id debitis sequi incidunt. Odio.</p>
+                                <p>Renata Glasc resurgió de las cenizas del
+                                    hogar de su infancia con poco más que su
+                                    apellido y la investigación alquímica de sus
+                                    padres...</p>
                                 <a class="boton" href="Renata.html">Saber más</a>
                             </div>
                         </div>
@@ -127,7 +132,13 @@
                                     class="card-img-top p-4">
                             </div>
                             <div class="card-body">
-                                <p>A pesar que se ha popularizado mucho el uso de la palabra Pentakill en otros MOBA, lo cierto es que Riot es propietario de la patente de esa palabra. Además, el grupo de música Pentakill liderado por Karthus también está registrado a nombre de Riot Games.</p>
+                                <p>A pesar que se ha popularizado mucho el uso
+                                    de la palabra Pentakill en otros MOBA, lo
+                                    cierto es que Riot es propietario de la
+                                    patente de esa palabra. Además, el grupo de
+                                    música Pentakill liderado por Karthus
+                                    también está registrado a nombre de Riot
+                                    Games.</p>
                             </div>
                         </div>
                     </div>
@@ -138,7 +149,15 @@
                                     class="card-img-top p-4">
                             </div>
                             <div class="card-body">
-                                <p>Cuando se juega a Aram, lo más importante es alimentar a los poros. Una vez que los jugadores alimentan a un poro diez veces, este explotará en 8 poritos. Para alimentarlos, sólo hay que darles una de las galletas con las que se empieza la partida. Un caso particular es Braum. Si este personaje le da una galleta, al poro le saldrá un bello bigote.</p>
+                                <p>Cuando se juega a Aram, lo más importante es
+                                    alimentar a los poros. Una vez que los
+                                    jugadores alimentan a un poro diez veces,
+                                    este explotará en 8 poritos. Para
+                                    alimentarlos, sólo hay que darles una de las
+                                    galletas con las que se empieza la partida.
+                                    Un caso particular es Braum. Si este
+                                    personaje le da una galleta, al poro le
+                                    saldrá un bello bigote.</p>
                             </div>
                         </div>
                     </div>
@@ -149,7 +168,9 @@
                                     class="card-img-top p-4">
                             </div>
                             <div class="card-body">
-                                <p>Evelynn mató a los padres de Vayne, y esta considera la magia negra como algo malvado e inadmisible.</p>
+                                <p>Evelynn mató a los padres de Vayne, y esta
+                                    considera la magia negra como algo malvado e
+                                    inadmisible.</p>
                             </div>
                         </div>
                     </div>
@@ -160,7 +181,13 @@
                                     class="card-img-top p-4">
                             </div>
                             <div class="card-body">
-                                <p>Orianna fue humana al 100% hace mucho tiempo. Sin embargo, tuvo que reemplazar partes de su cuerpo debido a una infección ocasionada en Zaun; Orianna llevaba una máscara y se la dio a un niño, lo que le provocó la infección por las poluciones de la ciudad. Al final acabó siendo 100% máquina.</p>
+                                <p>Orianna fue humana al 100% hace mucho tiempo.
+                                    Sin embargo, tuvo que reemplazar partes de
+                                    su cuerpo debido a una infección ocasionada
+                                    en Zaun; Orianna llevaba una máscara y se la
+                                    dio a un niño, lo que le provocó la
+                                    infección por las poluciones de la ciudad.
+                                    Al final acabó siendo 100% máquina.</p>
                             </div>
                         </div>
                     </div>
@@ -171,7 +198,13 @@
                                     class="card-img-top p-4">
                             </div>
                             <div class="card-body">
-                                <p>Los padres de Ekko están vivos, y le metieron en una escuela top de Piltover, aunque Ekko no lo quería. Ekko vio el genio oculto de Zaun, y ahora se va con "chusma" de la ciudad formada por un grupo de niños. Los padres de Ekko no sabían esto, y hace todo lo posible por ocultarlo.</p>
+                                <p>Los padres de Ekko están vivos, y le metieron
+                                    en una escuela top de Piltover, aunque Ekko
+                                    no lo quería. Ekko vio el genio oculto de
+                                    Zaun, y ahora se va con "chusma" de la
+                                    ciudad formada por un grupo de niños. Los
+                                    padres de Ekko no sabían esto, y hace todo
+                                    lo posible por ocultarlo.</p>
                             </div>
                         </div>
                     </div>
@@ -182,7 +215,11 @@
                                     class="card-img-top p-4">
                             </div>
                             <div class="card-body">
-                                <p>Aatrox era un ascendente de los generales de Shurima, pero se corrompió cuando luchó contra el Vacío, y fue sellado con las herramientas que los aspectos del crepúsculo dio a los mortales.</p>
+                                <p>Aatrox era un ascendente de los generales de
+                                    Shurima, pero se corrompió cuando luchó
+                                    contra el Vacío, y fue sellado con las
+                                    herramientas que los aspectos del crepúsculo
+                                    dio a los mortales.</p>
                             </div>
                         </div>
                     </div>
@@ -192,16 +229,27 @@
                 <div class="container">
                     <nav class="row">
                         <ul class="col-md-12 list-unstyled">
-                            <li class="text-uppercase text-center">Síguenos en nuestras Redes Sociales</li>
+                            <li class="text-uppercase text-center">Síguenos en
+                                nuestras Redes Sociales</li>
                             <div>
                                 <li class="d-flex justify-content-between py-3">
-                                    <a href="https://www.facebook.com/?locale=es_LA" class="text-reset"><i class="bi bi-facebook"></i></a>
-                                    <a href="https://twitter.com/?lang=es" class="text-reset"><i class="bi bi-twitter-x"></i></a>
-                                    <a href="https://www.instagram.com/" class="text-reset"><i class="bi bi-instagram"></i></a>
-                                    <a href="https://www.pinterest.com.mx/" class="text-reset"><i class="bi bi-pinterest"></i></a>
+                                    <a
+                                        href="https://www.facebook.com/?locale=es_LA"
+                                        class="text-reset"><i
+                                            class="bi bi-facebook"></i></a>
+                                    <a href="https://twitter.com/?lang=es"
+                                        class="text-reset"><i
+                                            class="bi bi-twitter-x"></i></a>
+                                    <a href="https://www.instagram.com/"
+                                        class="text-reset"><i
+                                            class="bi bi-instagram"></i></a>
+                                    <a href="https://www.pinterest.com.mx/"
+                                        class="text-reset"><i
+                                            class="bi bi-pinterest"></i></a>
                                 </li>
                             </div>
-                            <li class="text-center">Todos los derechos reservados</li>
+                            <li class="text-center">Todos los derechos
+                                reservados</li>
                         </ul>
                     </nav>
                 </div>
