--- a/vayne.html
+++ b/vayne.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="public/styles.css">
-        <title>LOLRift</title>
+        <title>Vayne</title>
     </head>
     <body>
         <div>
@@ -61,7 +61,15 @@
                 <h1 class="p-4">¿QUIÉN ES?</h1>
                 <div class="text-center p-3">
                     <div">
-                        <p>Shauna Vayne es una cazadora de monstruos demaciana letal y despiadada que ha dedicado su vida a buscar y destruir al demonio que asesinó a su familia. Provista de una ballesta que lleva en la muñeca y un corazón ansioso de venganza, Vayne solo es verdaderamente feliz cuando mata a practicantes de las artes oscuras o a sus creaciones, golpeando desde las sombras con una ráfaga de proyectiles de plata.</p>
+                        <p>Shauna Vayne es una cazadora de monstruos demaciana
+                            letal y despiadada que ha dedicado su vida a buscar
+                            y destruir al demonio que asesinó a su familia.
+                            Provista de una ballesta que lleva en la muñeca y un
+                            corazón ansioso de venganza, Vayne solo es
+                            verdaderamente feliz cuando mata a practicantes de
+                            las artes oscuras o a sus creaciones, golpeando
+                            desde las sombras con una ráfaga de proyectiles de
+                            plata.</p>
                     </div>
                 </div>
             </div>
@@ -73,12 +81,15 @@
                     <div class="card text-center p-3 bg-body-secondary">
                         <h1>Pasiva</h1>
                         <div class="overflow">
-                            <img class="w-50" src="./public/image/Habilidades/PVayne.jpg" alt
+                            <img class="w-50"
+                                src="./public/image/Habilidades/PVayne.jpg" alt
                                 class="card-img-top p-4">
                         </div>
                         <div class="card-body">
                             <p style="font-weight: bolder;">Cazadora Noctívaga</p>
-                            <p>Vayne caza implacablemente a los malhechores y obtiene 45 de velocidad de movimiento cuando avanza hacia un campeón enemigo cercano.</p>
+                            <p>Vayne caza implacablemente a los malhechores y
+                                obtiene 45 de velocidad de movimiento cuando
+                                avanza hacia un campeón enemigo cercano.</p>
                         </div>
                     </div>
                 </div>
@@ -86,12 +97,15 @@
                     <div class="card text-center p-3 bg-body-secondary">
                         <h1>1er. Habilidad</h1>
                         <div class="overflow">
-                            <img class="w-50" src="./public/image/Habilidades/1Vayne.jpg" alt
+                            <img class="w-50"
+                                src="./public/image/Habilidades/1Vayne.jpg" alt
                                 class="card-img-top p-4">
                         </div>
                         <div class="card-body">
                             <p style="font-weight: bolder;">Pirueta</p>
-                            <p>Vayne realiza una pirueta para preparar su próximo disparo, el cual infligirá daño adicional.</p>
+                            <p>Vayne realiza una pirueta para preparar su
+                                próximo disparo, el cual infligirá daño
+                                adicional.</p>
                         </div>
                     </div>
                 </div>
@@ -99,12 +113,18 @@
                     <div class="card text-center p-3 bg-body-secondary">
                         <h1>2da. Habilidad</h1>
                         <div class="overflow">
-                            <img class="w-50" src="./public/image/Habilidades/2Vayne.jpg" alt
+                            <img class="w-50"
+                                src="./public/image/Habilidades/2Vayne.jpg" alt
                                 class="card-img-top p-4">
                         </div>
                         <div class="card-body">
                             <p style="font-weight: bolder;">Proyectiles de plata</p>
-                            <p>Vayne impregna sus proyectiles de un metal especial, tóxico para los seres maléficos. El tercer ataque o habilidad consecutivos contra el mismo objetivo inflige un porcentaje de la vida máxima del objetivo como daño verdadero adicional.</p>
+                            <p>Vayne impregna sus proyectiles de un metal
+                                especial, tóxico para los seres maléficos. El
+                                tercer ataque o habilidad consecutivos contra el
+                                mismo objetivo inflige un porcentaje de la vida
+                                máxima del objetivo como daño verdadero
+                                adicional.</p>
                         </div>
                     </div>
                 </div>
@@ -112,12 +132,18 @@
                     <div class="card text-center p-3 bg-body-secondary">
                         <h1>3er. Habilidad</h1>
                         <div class="overflow">
-                            <img class="w-50" src="./public/image/Habilidades/3Vayne.jpg" alt
+                            <img class="w-50"
+                                src="./public/image/Habilidades/3Vayne.jpg" alt
                                 class="card-img-top p-4">
                         </div>
                         <div class="card-body">
                             <p style="font-weight: bolder;">Condena</p>
-                            <p>Vayne saca una pesada ballesta y dispara un enorme proyectil contra su objetivo, infligiéndole daño y haciendo que retroceda. Si este impacta contra un obstáculo del terreno, queda empalado, aturdido y recibe daño adicional.</p>
+                            <p>Vayne saca una pesada ballesta y dispara un
+                                enorme proyectil contra su objetivo,
+                                infligiéndole daño y haciendo que retroceda. Si
+                                este impacta contra un obstáculo del terreno,
+                                queda empalado, aturdido y recibe daño
+                                adicional.</p>
                         </div>
                     </div>
                 </div>
@@ -125,17 +151,22 @@
                     <div class="card text-center p-3 bg-body-secondary">
                         <h1>Ultimate</h1>
                         <div class="overflow">
-                            <img class="w-50" src="./public/image/Habilidades/UVayne.jpg" alt
+                            <img class="w-50"
+                                src="./public/image/Habilidades/UVayne.jpg" alt
                                 class="card-img-top p-4">
                         </div>
                         <div class="card-body">
                             <p style="font-weight: bolder;">Hora final</p>
-                            <p>Vayne se prepara para una confrontación épica y obtiene daño de ataque adicional, invisibilidad durante Pirueta, reducción de enfriamiento para Pirueta y más velocidad de movimiento adicional durante Cazadora noctívaga.</p>
+                            <p>Vayne se prepara para una confrontación épica y
+                                obtiene daño de ataque adicional, invisibilidad
+                                durante Pirueta, reducción de enfriamiento para
+                                Pirueta y más velocidad de movimiento adicional
+                                durante Cazadora noctívaga.</p>
                         </div>
                     </div>
                 </div>
             </div>
-        </div> 
+        </div>
         <footer id="Footer" class="bg-dark text-white py-4">
             <div class="container">
                 <nav class="row">
